--- a/web/src/main/webapp/WEB-INF/velocity/isoform-list.xml.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/isoform-list.xml.vm
@@ -1,8 +1,8 @@
-<protein-sequence-list>
+<isoform-list>
 	#foreach($isoform in $entry.isoforms)
-	<protein-sequence accession='$isoform.uniqueName' #if($isoform.isSwissProtDisplayedIsoform()) swissprot-displayed-isoform='true' #end>
+	<isoform accession='$isoform.uniqueName' database='neXtProt' #if($isoform.isSwissProtDisplayedIsoform()) swissprot-displayed-isoform='true' #end>
 	#if($isoform.mainEntityName)
-	<entity-name isMain='true' type='$isoform.mainEntityName.type' qualifier='#if($isoform.mainEntityName.qualifier)$isoform.mainEntityName.qualifier#end'>
+	<entity-name is-main='true' type='$isoform.mainEntityName.type' qualifier='#if($isoform.mainEntityName.qualifier)$isoform.mainEntityName.qualifier#end'>
 		<value>$isoform.mainEntityName.value</value>
 		#if($isoform.synonyms.size() > 0)
 		<synonym-list>
@@ -16,6 +16,6 @@
 	</entity-name>
 	#end
 	<sequence>$isoform.sequence</sequence>
-	</protein-sequence>
+	</isoform>
 	#end
-</protein-sequence-list>
+</isoform-list>
