--- a/web/src/main/webapp/WEB-INF/velocity/target-isoform-list-annotation.xml.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/target-isoform-list-annotation.xml.vm
@@ -1,9 +1,11 @@
 <target-isoform-list>
 	#foreach($isospec in $target-isoform-list.values())
-		<target-isoform accession="$isospec.isoformName">
+		<target-isoform accession="$isospec.isoformName" specificity='$isospec.specificity'>
 		#if($isospec.isPositional())
 			<position-list>
-				<position #if($isospec.getFirstPosition() > 0) start='$isospec.getFirstPosition()'#{else}startStatus='unknown'#end #if($isospec.getLastPosition() > 0) end='$isospec.getLastPosition()'#{else}endStatus='unknown'#end />
+				<position 
+				#if($isospec.getFirstPosition() > 0) start='$isospec.getFirstPosition()'#{else}startStatus='unknown'#end
+				#if($isospec.getLastPosition() > 0) end='$isospec.getLastPosition()'#{else}endStatus='unknown'#end />
 			</position-list>
 		#end
 		</target-isoform>
