adjusted attribute name: property-name

--- a/web/src/main/webapp/WEB-INF/velocity/xref.xml.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/xref.xml.vm
@@ -4,7 +4,7 @@
 	#if($xref.properties && $xref.properties.size() > 0) 													
 		<properties>
 			#foreach($prop in $xref.properties)
-				<property propertyName="$prop.name" value="$prop.value"/>
+				<property property-name="$prop.name" value="$prop.value"/>
 			#end
 		</properties>
 	#end
