refactored how xrefs are loaded by DAO and added the collecting of xrefs from peptide and interaction evidences

--- a/web/src/main/webapp/WEB-INF/velocity/annotation.xml.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/annotation.xml.vm
@@ -27,11 +27,11 @@
 			<evidence 
 				is-negative='$evidence.isNegativeEvidence()'  
 				qualifier-type='$evidence.getQualifierType()' 
-				resource-ref='$evidence.getResourceId()' 
+				resource-internal-ref='$evidence.getResourceId()' 
 				resource-assoc-type='$evidence.getResourceAssociationType()' 
 				resource-type='$evidence.getResourceType()'
-				#if($evidence.getExperimentalContextId()>0) experimental-context-ref='$evidence.getExperimentalContextId()' #end
-				#if($evidence.getAssignedBy()) source-ref='$evidence.getAssignedBy()' #end
+				#if($evidence.getExperimentalContextId()>0) experimental-context-internal-ref='$evidence.getExperimentalContextId()' #end
+				#if($evidence.getAssignedBy()) source-internal-ref='$evidence.getAssignedBy()' #end
 			/>
 		#end
     </evidence-list>
