--- a/web/src/main/webapp/WEB-INF/velocity/annotation.xml.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/annotation.xml.vm
@@ -26,7 +26,8 @@
         #foreach($evidence in $annotation.getEvidences())
 			<evidence 
 				is-negative='$evidence.isNegativeEvidence()'  
-				qualifier-type='$evidence.getQualifierType()' 
+##				qualifier-type='$evidence.getQualifierType()' 
+				evidence-code='$StringUtils.slug($evidence.getEvidenceCodeAC())'
 				resource-internal-ref='$evidence.getResourceId()' 
 				resource-assoc-type='$evidence.getResourceAssociationType()' 
 				resource-type='$evidence.getResourceType()'
