changed predicate name from :code to :evidenceCode in ttl velocity templates and query examples

--- a/web/src/main/webapp/WEB-INF/velocity/turtle/interaction.ttl.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/turtle/interaction.ttl.vm
@@ -22,7 +22,7 @@ interaction:$interaction.id a ProteinInteraction ;
   .
 evidence:$interaction.evidenceId 
   rdf:type :Evidence ;
-  :code :$interaction.evidenceType ;
+  :evidenceCode :$interaction.evidenceType ;
   :assignedBy source:$interaction.evidenceDatasource;
   :quality :$interaction.evidenceQuality ;
   :reference [
