--- a/web/src/main/webapp/WEB-INF/velocity/turtle/isoform-interaction-list.ttl.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/turtle/isoform-interaction-list.ttl.vm
@@ -50,7 +50,7 @@ interaction:$iso-interaction-iri a :BinaryInteraction;
 #foreach($interaction in $entry.getInteractionsByIsoform($isoform-name))
 evidence:$interaction.evidenceId 
   rdf:type :Evidence ;
-  :code :$interaction.evidenceType ;
+  :evidenceCode :$interaction.evidenceType ;
   :assignedBy source:$interaction.evidenceDatasource;
   :quality :$interaction.evidenceQuality ;
   :reference [
