updated ECO codes for peptide & srm peptide mappings in ttl and xml and added SRM mapping data which was missing in ttl templates

--- a/web/src/main/webapp/WEB-INF/velocity/turtle/entry.ttl.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/turtle/entry.ttl.vm
@@ -36,3 +36,6 @@ entry:$entry.getUniqueName() a :Entry;
 ## Isoform - peptide mappings
 #parse('turtle/peptide-list.ttl.vm')
 
+## Isoform - SRM peptide mappings
+#parse('turtle/srm-peptide-list.ttl.vm')
+
