updated ECO for binary interactions in ttl and xml, ECO values are not slugged in XML anymore

--- a/web/src/main/webapp/WEB-INF/velocity/annotation.xml.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/annotation.xml.vm
@@ -27,7 +27,7 @@
 			<evidence 
 				is-negative='$evidence.isNegativeEvidence()'  
 ##				qualifier-type='$evidence.getQualifierType()' 
-				evidence-code='$StringUtils.slug($evidence.getEvidenceCodeAC())'
+				evidence-code='$evidence.getEvidenceCodeAC()'
 				resource-internal-ref='$evidence.getResourceId()' 
 				resource-assoc-type='$evidence.getResourceAssociationType()' 
 				resource-type='$evidence.getResourceType()'
