--- a/web/src/main/webapp/WEB-INF/velocity/annotation-list.xml.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/annotation-list.xml.vm
@@ -3,12 +3,14 @@
 #if ($category.isLeaf())
 #set($catName=$NXUtils.getAnnotationCategoryNameForXML($category))
 #set($catHier=$NXUtils.getAnnotationCategoryHierachyForXML($category))
-  <annotation-category category="$catName" hierarchy="$catHier">
 #set($annotations=$NXUtils.getAnnotationsByCategory($entry, $category))
+#if (!$annotations.isEmpty())
+  <annotation-category category="$catName" hierarchy="$catHier">
 #foreach($annotation in $annotations)
     #parse("annotation.xml.vm")
 #end
   </annotation-category>
+#end
 #end
 #end
 </annotation-list>
