refarctored evidence representation for antibody (and peptides) mapping evidences in xml and ttl to look like annotation evidences

--- a/web/src/main/webapp/WEB-INF/velocity/publication.xml.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/publication.xml.vm
@@ -8,7 +8,7 @@
 		<authors>
 		#foreach($author in $publication.authors)
 			#if($author.isPerson())
-				<person name="$author.foreName $author.lastName $author.suffix" suffix="$author.suffix"/>
+				<person name="$author.foreName $author.lastName" suffix="$author.suffix"/>
 			#else
 				<consortium name="$author.lastName"/>
 			#end
