--- a/web/src/main/webapp/WEB-INF/velocity/turtle/schema-evidence-list.ttl.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/turtle/schema-evidence-list.ttl.vm
@@ -23,17 +23,6 @@
       rdfs:subClassOf :Evidence;
       .
       
-      
-:evidence
-      rdf:type owl:ObjectProperty ;
-      rdfs:domain :Annotation ;
-      rdfs:range [
-#       a :Evidence;
-        owl:oneOf( :IDA :IPI :IGI :IEP :ISS :ISO :ISA :ISM :IGC :RCA :TAS :NAS :IC :ND :IEA :NR :IMP :IBA :IBD :IKR :IRD :EXP);
-      ];
-      .
-      
-      
 :assignedBy
       a rdf:Property, owl:FunctionalProperty ;
       rdfs:domain :Evidence ;
@@ -66,30 +55,30 @@
       .
 
 # Links between :GOEvidenceCode  :EvidenceCodeOntology
-## Manual mapping by pam, TODO: to be validated
-
-:IDA :related  cv:ECO_0000002 .  
-:IPI :related  cv:ECO_0000021 .   
-:IGI  :related  cv:ECO_0000011 .  
-:IEP  :related cv:ECO_0000008 .  
-:ISS  :related cv:ECO_0000027 , cv:ECO_0000044 .  
-:ISO  :related  cv:ECO_0000201 .  
-:ISA  :related  cv:ECO_0000200 .  
-:ISM  :related  cv:ECO_0000202 .  
-:IGC  :related  cv:ECO_0000177 .  
-:RCA  :related  cv:ECO_0000245 .  
-:TAS  :related  cv:ECO_0000033 .  
-:NAS  :related  cv:ECO_0000034 .  
-:IC  :related  cv:ECO_0000205 .  
-:ND  :related  cv:ECO_0000035 .  
-:IEA  :related  cv:ECO_0000203 .  
-##:NR  :related  ??? .   
-:IMP  :related  cv:ECO_0000015 .  
-:IBA  :related  cv:ECO_0000308 .  
-:IBD  :related  cv:ECO_0000214 .  
-:IKR  :related  cv:ECO_0000216 .  
-:IRD  :related  cv:ECO_0000215 .  
-:EXP :related  cv:ECO_0000006 .  
+## Uniprot mapping: source http://evidenceontology.googlecode.com/svn/trunk/gaf-eco-mapping.txt
+:EXP :related cv:ECO_0000269 .
+:IBA :related cv:ECO_0000318 .
+:IBD :related cv:ECO_0000319 .
+:IC  :related cv:ECO_0000305 .
+:IDA :related cv:ECO_0000314 .
+:IEA :related cv:ECO_0000501 .
+:IEP :related cv:ECO_0000270 .
+:IGC :related cv:ECO_0000317 .
+:IGC :related cv:ECO_0000354 .
+:IGI :related cv:ECO_0000316 .
+:IKR :related cv:ECO_0000320 .
+:IMP :related cv:ECO_0000315 .
+:IMR :related cv:ECO_0000320 .
+:IPI :related cv:ECO_0000353 .
+:IRD :related cv:ECO_0000321 .
+:ISA :related cv:ECO_0000247 .
+:ISM :related cv:ECO_0000255 .
+:ISO :related cv:ECO_0000266 .
+:ISS :related cv:ECO_0000250 .
+:NAS :related cv:ECO_0000303 .
+:ND  :related cv:ECO_0000307 .
+:RCA :related cv:ECO_0000245 .
+:TAS :related cv:ECO_0000304 .
 
 
 #foreach($evidence in $evidenceList)
