--- a/web/src/main/webapp/WEB-INF/velocity/turtle/schema-mappings.ttl.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/turtle/schema-mappings.ttl.vm
@@ -12,7 +12,13 @@
 
 :PeptideMapping
       rdf:type owl:Class ;
-      rdfs:comment "Positional mapping of a peptide to an isoform"^^xsd:string ;
+      rdfs:comment "Positional mapping of a natural peptide to an isoform"^^xsd:string ;
+      rdfs:subClassOf owl:Thing;
+      .
+
+:SrmPeptideMapping
+      rdf:type owl:Class ;
+      rdfs:comment "Positional mapping of a synthetic peptide to an isoform"^^xsd:string ;
       rdfs:subClassOf owl:Thing;
       .
 
