export service with different views (annotation categories)

--- a/web/src/main/webapp/WEB-INF/velocity/entity-name.xml.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/entity-name.xml.vm
@@ -1,6 +1,4 @@
-<entity-name 
-	type="$entityName.type" value="$entityName.synonymName"
-	is-main="$entityName.isMain()" qualifier="#if($entityName.getQualifier())$entityName.getQualifier()#end">
+<entity-name type="$entityName.type" value="$entityName.synonymName" is-main="$entityName.isMain()" qualifier="#if($entityName.getQualifier())$entityName.getQualifier()#end">
 	#if($entityName.synonyms)
         <synonyms>
 		#foreach($synonym in $entityName.synonyms)
