remove :quality predicate when not defined for annotation

--- a/web/src/main/webapp/WEB-INF/velocity/turtle/isoform-annotation.ttl.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/turtle/isoform-annotation.ttl.vm
@@ -1,6 +1,8 @@
 annotation:$annotation-uri a :$annotation-type;
   :entryAnnotationId "$annotation.getUniqueName()"^^xsd:string;
+#if($annotation.getQualityQualifier())
   :quality :$annotation.getQualityQualifier();
+#end
   :isoformSpecificity :$annotation.getSpecificityForIsoform($isoform-name);
 #if($annotation.getCvTermName())
   :term cv:$StringUtils.slug($annotation.getCvTermAccessionCode());
