fixed bug in spellchecker on seating words like 3hydroanth_dOase_animal, see issue CALIPHOMISC-72 and added tests for SolrService

--- a/web/src/main/webapp/WEB-INF/velocity/search.json.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/search.json.vm
@@ -24,7 +24,7 @@
 	"spellcheck": {
 		"collations": [
 		#foreach($col in $result.getSpellcheck().getCollations())
-		{"query":"$col.getFirst()","hits":$col.getSecond()}#if($velocityHasNext),
+		{"query":"$StringUtils.removePlus($col.getFirst())","hits":$col.getSecond()}#if($velocityHasNext),
 #end
 		#end],
 		"suggestions": {
