--- a/web/src/main/webapp/WEB-INF/velocity/annotation.xml.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/annotation.xml.vm
@@ -24,16 +24,8 @@
     #if($annotation.getEvidences())
     <evidence-list>
         #foreach($evidence in $annotation.getEvidences())
-			<evidence 
-				is-negative='$evidence.isNegativeEvidence()'  
-##				qualifier-type='$evidence.getQualifierType()' 
-				evidence-code='$evidence.getEvidenceCodeAC()'
-				resource-internal-ref='$evidence.getResourceId()' 
-				resource-assoc-type='$evidence.getResourceAssociationType()' 
-				resource-type='$evidence.getResourceType()'
-				#if($evidence.getExperimentalContextId()>0) experimental-context-internal-ref='$evidence.getExperimentalContextId()' #end
-				#if($evidence.getAssignedBy()) source-internal-ref='$evidence.getAssignedBy()' #end
-			/>
+			## should include qualifier-type='$evidence.getQualifierType()' 
+			<evidence is-negative='$evidence.isNegativeEvidence()' evidence-code='$evidence.getEvidenceCodeAC()' resource-internal-ref='$evidence.getResourceId()'  resource-assoc-type='$evidence.getResourceAssociationType()' resource-type='$evidence.getResourceType()' #if($evidence.getExperimentalContextId()>0) experimental-context-internal-ref='$evidence.getExperimentalContextId()' #end #if($evidence.getAssignedBy()) source-internal-ref='$evidence.getAssignedBy()' #end	/>
 		#end
     </evidence-list>
 	#end
