--- a/web/src/main/webapp/WEB-INF/velocity/experimental-context-list.xml.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/experimental-context-list.xml.vm
@@ -1,13 +1,5 @@
 <experimental-context-list>
 #foreach($ctx in $entry.getExperimentalContexts())
-	<experimental-context internal-id='$ctx.getContextId()' 
-		#if($ctx.tissueAC) tissueAC='$ctx.tissueAC' #end
-		#if($ctx.developmentalStageAC) developmentalStageAC='$ctx.developmentalStageAC' #end
-		#if($ctx.cellLineAC) cellLineAC='$ctx.cellLineAC' #end
-		#if($ctx.diseaseAC) diseaseAC='$ctx.diseaseAC' #end
-		#if($ctx.organelleAC) organelleAC='$ctx.organelleAC' #end
-		#if($ctx.detectionMethodAC) detectionMethodAC='$ctx.detectionMethodAC' #end
-		#if($ctx.metadataAC) metadataAC='$ctx.metadataAC' #end
-	/>
+	<experimental-context internal-id='$ctx.getContextId()' #if($ctx.tissueAC) tissueAC='$ctx.tissueAC' #end #if($ctx.developmentalStageAC) developmentalStageAC='$ctx.developmentalStageAC' #end #if($ctx.cellLineAC) cellLineAC='$ctx.cellLineAC' #end #if($ctx.diseaseAC) diseaseAC='$ctx.diseaseAC' #end #if($ctx.organelleAC) organelleAC='$ctx.organelleAC' #end #if($ctx.detectionMethodAC) detectionMethodAC='$ctx.detectionMethodAC' #end #if($ctx.metadataAC) metadataAC='$ctx.metadataAC' #end />
 #end
 </experimental-context-list>
