fixing annotation categories

--- a/web/src/main/webapp/WEB-INF/velocity/target-isoform-list-annotation.xml.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/target-isoform-list-annotation.xml.vm
@@ -3,9 +3,7 @@
 		<target-isoform accession="$isospec.isoformName" specificity='$isospec.specificity'>
 		#if($isospec.isPositional())
 			<position-list>
-				<position 
-				#if($isospec.getFirstPosition() > 0) start='$isospec.getFirstPosition()' #{else}startStatus='unknown'#end
-				#if($isospec.getLastPosition() > 0) end='$isospec.getLastPosition()' #{else}endStatus='unknown'#end />
+				<position #if($isospec.getFirstPosition() > 0) start='$isospec.getFirstPosition()' #{else}startStatus='unknown'#end #if($isospec.getLastPosition() > 0) end='$isospec.getLastPosition()' #{else}endStatus='unknown'#end />
 			</position-list>
 		#end
 		</target-isoform>
