Fixing velocity template annotation-list

--- a/web/src/main/webapp/WEB-INF/velocity/annotation-list.xml.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/annotation-list.xml.vm
@@ -1,5 +1,5 @@
 <annotation-list>
-#foreach($category in $NXUtils.annotationCategories)
+#foreach($category in $NXUtils.getAnnotationCategories())
 #if ($category.isLeaf())
 #set($catName=$NXUtils.getAnnotationCategoryNameForXML($category))
 #set($catHier=$NXUtils.getAnnotationCategoryHierachyForXML($category))
