swissprotDisplayed property now properly set for every isoform

--- a/web/src/main/webapp/WEB-INF/velocity/turtle/entry.ttl.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/turtle/entry.ttl.vm
@@ -11,6 +11,7 @@ entry:$entry.getUniqueName() a :Entry;
   .
 
 #foreach($isoform in $entry.getIsoforms())
+#set($isoform-name =  $isoform.getUniqueName())
 #if($isoform.isSwissProtDisplayedIsoform()) 
 isoform:$isoform-name :swissprotDisplayed "true"^^xsd:boolean . 
 #else
