--- a/web/src/main/webapp/WEB-INF/velocity/peff/entry.peff.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/peff/entry.peff.vm
@@ -4,6 +4,6 @@
 #set ( $sv = $entry.getOverview().getHistory().getSequenceVersion() )
 #set ( $ev = $entry.getOverview().getHistory().getUniprotVersion() )
 #foreach($isoform in $entry.isoforms)
->nxp:$isoform.getUniqueName() \DbUniqueId=$isoform.getUniqueName() \Pname=$protName \Gname=$geneName \NcbiTaxId=9606 \TaxName=Homo Sapiens \Length=$isoform.getSequence().length() \SV=$sv \EV=$ev \PE=$pe \Variant=$NXUtils.getVariantsAsPeffString($entry, $isoform) \ModResPsi=$NXUtils.getPsiPTMsAsPeffString($entry, $isoform) \ModRes=$NXUtils.getNoPsiPTMsAsPeffString($entry, $isoform) \Processed=$NXUtils.getProcessingProductsAsPeffString($entry, $isoform)
+>nxp:$isoform.getUniqueName() \DbUniqueId=$isoform.getUniqueName() \Pname=$protName isoform $isoform.formatIsoformId() \Gname=$geneName \NcbiTaxId=9606 \TaxName=Homo Sapiens \Length=$isoform.getSequence().length() \SV=$sv \EV=$ev \PE=$pe \ModResPsi=$NXUtils.getPsiPTMsAsPeffString($entry, $isoform) \ModRes=$NXUtils.getNoPsiPTMsAsPeffString($entry, $isoform) \Variant=$NXUtils.getVariantsAsPeffString($entry, $isoform) \Processed=$NXUtils.getProcessingProductsAsPeffString($entry, $isoform)
 $StringUtils.wrapText($isoform.getSequence(), 60)
 #end
