--- a/web/src/main/webapp/WEB-INF/velocity/annotation.xml.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/annotation.xml.vm
@@ -25,7 +25,7 @@
     <evidence-list>
         #foreach($evidence in $annotation.getEvidences())
 			## should include qualifier-type='$evidence.getQualifierType()' 
-			<evidence is-negative='$evidence.isNegativeEvidence()' evidence-code='$evidence.getEvidenceCodeAC()' resource-internal-ref='$evidence.getResourceId()'  resource-assoc-type='$evidence.getResourceAssociationType()' resource-type='$evidence.getResourceType()' #if($evidence.getExperimentalContextId()>0) experimental-context-internal-ref='$evidence.getExperimentalContextId()' #end #if($evidence.getAssignedBy()) source-internal-ref='$evidence.getAssignedBy()' #end	/>
+			<evidence is-negative='$evidence.isNegativeEvidence()' evidence-code='$evidence.getEvidenceCodeAC()' resource-internal-ref='$evidence.getResourceId()'  resource-assoc-type='$evidence.getResourceAssociationType()' #if($evidence.getQualityQualifier()) accession='$evidence.getQualityQualifier()' #end resource-type='$evidence.getResourceType()' #if($evidence.getExperimentalContextId()>0) experimental-context-internal-ref='$evidence.getExperimentalContextId()' #end #if($evidence.getAssignedBy()) source-internal-ref='$evidence.getAssignedBy()' #end	/>
 		#end
     </evidence-list>
 	#end
